enhance editor panel, reduce statements and loops